--- a/phenology-frontend/src/app/common/navigation/navigation.component.html
+++ b/phenology-frontend/src/app/common/navigation/navigation.component.html
@@ -2,10 +2,12 @@
   <!-- Navbar Brand-->
   <a class="navbar-brand ps-3 text-white" routerLink="/"><img src="../../../assets/image/logo2.png" alt="" width="50px"></a>
   <a class="navbar-brand ps-3 text-white" routerLink="/"><strong>Növényfenológia</strong></a>
-  <a routerLink="/observation" class="nav-link text-white">Megfigyelések</a>
+  <a routerLink="/observation" class="nav-link text-white">Új megfigyelés</a>
+  <a routerLink="/data" class="nav-link text-white">Megfigyelések</a>
   <a routerLink="/article" class="nav-link text-white">Cikkek</a>
   <a routerLink="/history" class="nav-link text-white">Történet</a>
   <a routerLink="/guide" class="nav-link text-white">Útmutató</a>
+  <a routerLink="/plant" class="nav-link text-white">Növények</a>
 
   <!-- Sidebar Toggle-->
   <button class="btn btn-link btn-sm text-white order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fa fa-bars"></i></button>
