--- a/phenology-frontend/src/app/page/guide/guide.component.html
+++ b/phenology-frontend/src/app/page/guide/guide.component.html
@@ -84,4 +84,57 @@
   pontosan emlékszünk.
 </p>
 
-<a [routerLink]="'/details'" class="card-link">Bővebben</a>
+<h5>Fenológiai fázisok</h5>
+
+<h6>Fák és cserjék</h6>
+
+<p>
+  Egyes növényfajták fenológiai fázisai nem az alább leírt sorrendben
+  következnek be. Pl. a som virágzása megelőzi a lombosodást.
+  <br />
+  1. Rügyfakadás
+  <br />
+  A rügyek felduzzadása szemmel láthatóan megindult, a rügypikkelyek között
+  megjelent a lomb- ill. a sziromlevelek hegye.
+  <br />
+  2. Lombosodás kezdete
+  <br />
+  A rügyekből megjelentek az első zöld levelek, a fa távolról már nem látszik
+  csupasznak. A som estében először a virágok nyílnak, csak ez után kezdődik a
+  lombosodás.
+  <br />
+  3. Virágzás kezdete
+  <br />
+  Az első teljes mértékben kinyílt virágok megjelenése, de a virágok zöme még
+  bimbóban van.
+  <br />
+  4. Teljes virágzás
+  <br />
+  A normálisan fejlett bimbók zömmel kinyíltak, a sziromlevelek szétterültek, a
+  porzó és a bibe jól látható.
+  <br />
+  5. Érett termés
+  <br />
+  A gyümölcsöknél a termés a fajtára jellemző színt és nagyságot legalább 50
+  %-ban elérte. Vadgesztenyénél, diónál a termésburok fölrepedését kell
+  megfigyelni.
+  <br />
+  6. Őszi lombszíneződés kezdete
+  <br />
+  A levelek legalább 50%-a elszíneződött a fán.
+  <br />
+  7. Őszi lombhullás kezdete
+  <br />
+  A levelek zöme felvette a fajtára jellemző jellegzetes őszi színt, és legalább
+  10 % le is hullott.
+</p>
+
+<h6>Lágyszárúak</h6>
+
+<p>
+  1. Virágzás kezdete
+  <br />
+  Az első teljes mértékben kinyílt virágok megjelenése.
+</p>
+
+<a [routerLink]="'/plant'" class="card-link">Növények részletes bemutatása</a>
