--- a/phenology-frontend/src/app/page/guide/individual-plant-guide/individual-plant-guide.component.html
+++ b/phenology-frontend/src/app/page/guide/individual-plant-guide/individual-plant-guide.component.html
@@ -2,6 +2,14 @@
 
 <h4>{{plant.name}}</h4>
 
-<p>individual-plant-guide works!</p>
+<h6>{{ plant.latin }}</h6>
+
+<img [src]="plant.image[1]" alt="" class="m-3">
+
+<p>{{ plant.description }}</p>
+
+<img [src]="plant.image[2]" alt="" class="m-3">
+
+<img [src]="plant.image[3]" alt="" class="m-3">
 
 </div>
