--- a/phenology-frontend/src/app/page/observed-datas/observed-datas.component.html
+++ b/phenology-frontend/src/app/page/observed-datas/observed-datas.component.html
@@ -1,1 +1,25 @@
-<p>observed-datas works!</p>
+<div *ngIf="(observation$ | async) as observations" class="col-6 offset-3">
+
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Dátum</th>
+        <th>Megfigyelő</th>
+        <th>Helyszín</th>
+        <th>Növény</th>
+        <th>Fenofázis</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let observation of observations">
+        <td>{{ observation.date }}</td>
+        <td></td>
+        <td>{{observation.location }}</td>
+        <td>{{ observation.plant.name }}</td>
+        <td>{{ observation.phase }}</td>
+      </tr>
+    </tbody>
+  </table>
+
+  </div>
+
