--- a/phenology-frontend/src/app/page/observation-datas/observation-datas.component.html
+++ b/phenology-frontend/src/app/page/observation-datas/observation-datas.component.html
@@ -193,6 +193,7 @@
       </div>
 
       {{observation | json}}
+      {{ currentUser$ | async}}
 
 
       <button class="btn btn-primary" [disabled]="observationForm.invalid" type="submit">Mentés</button>
