--- a/phenology-frontend/src/app/page/article/article.component.html
+++ b/phenology-frontend/src/app/page/article/article.component.html
@@ -1,24 +1,23 @@
-
-<div class="m-5 d-flex" *ngIf="(article$ | async) as articles">
-
-  <div class="d-block" *ngFor="let article of articles">
-    <p><i> {{ article.date }} </i></p>
-    <h1> {{ article.title }}</h1>
-    <p> {{ article.abstract }} </p>
-    <p>
-      <img
-        [src]="article.images[0]"
-        alt="cikk"
-        style="float: left; max-width: 300px"
-        class="me-3"
-      />
-      {{ article.main }}
-    </p>
+<div class="m-5 " *ngIf="article$ | async as articles">
+  <div class="d-block d-flex" *ngFor="let article of articles">
+    <div class="d-inline-block">
+      <p>
+        <i> {{ article.date }} </i>
+      </p>
+      <h1>{{ article.title }}</h1>
+      <p>{{ article.abstract }}</p>
+      <p>
+        <img
+          [src]="article.images[0]"
+          alt="cikk"
+          style="float: left; max-width: 300px"
+          class="me-3"
+        />
+        {{ article.main }}
+      </p>
+    </div>
   </div>
 </div>
-
-
-
 
 <div class="m-5 d-flex">
   <div class="d-block">
