--- a/phenology-frontend/src/app/page/guide/detailed-plant-guide/detailed-plant-guide.component.html
+++ b/phenology-frontend/src/app/page/guide/detailed-plant-guide/detailed-plant-guide.component.html
@@ -4,14 +4,14 @@
 <div class="d-block">
   <div class="row row-cols-3 row-cols-md-6 g-3 mt-3 text-dark">
     <div class="col" *ngFor="let plant of trees">
-      <div class="card h-100">
-        <a routerLink="/plant/{{plant._id}}">
-          <img [src]="plant.image[0]" class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h6 class="card-title fw-bold">{{ plant.name }}</h6>
-          </div>
-        </a>
-      </div>
+      <div class="card h-100 shadow hovered">
+                  <a routerLink="/plant/{{ plant._id }}">
+            <img [src]="plant.image[0]" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h6 class="card-title fw-bold">{{ plant.name }}</h6>
+            </div>
+          </a>
+        </div>
     </div>
   </div>
 </div>
@@ -20,27 +20,30 @@
 <div class="d-block">
   <div class="row row-cols-3 row-cols-md-6 g-3 mt-3 text-dark">
     <div class="col" *ngFor="let plant of shrub">
-      <div class="card h-100">
-        <a routerLink="/plant/{{plant._id}}">
+      <div class="card h-100 shadow hovered">
+        <a routerLink="/plant/{{ plant._id }}">
           <img [src]="plant.image[0]" class="card-img-top" alt="..." />
           <div class="card-body">
             <h6 class="card-title fw-bold">{{ plant.name }}</h6>
           </div>
         </a>
+      </div>
     </div>
   </div>
-</div>
 
-<h2>Lágyszárúak</h2>
-<div class="d-block">
-  <div class="row row-cols-3 row-cols-md-6 g-3 mt-3 text-dark">
-    <div class="col" *ngFor="let plant of herbaceous">
-      <a routerLink="/plant/{{plant._id}}">
-        <img [src]="plant.image[0]" class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h6 class="card-title fw-bold">{{ plant.name }}</h6>
+  <h2>Lágyszárúak</h2>
+  <div class="d-block">
+    <div class="row row-cols-3 row-cols-md-6 g-3 mt-3 text-dark">
+      <div class="col" *ngFor="let plant of herbaceous">
+        <div class="card h-100 shadow hovered">
+          <a routerLink="/plant/{{ plant._id }}">
+            <img [src]="plant.image[0]" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h6 class="card-title fw-bold">{{ plant.name }}</h6>
+            </div>
+          </a>
         </div>
-      </a>
+      </div>
     </div>
   </div>
 </div>
