--- a/phenology-frontend/src/app/page/observed-datas/observed-datas.component.html
+++ b/phenology-frontend/src/app/page/observed-datas/observed-datas.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="(observation$ | async) as observations" class="col-6 offset-3">
+<div *ngIf="(observation$ | async) as observations" class="col-10 offset-1">
 
   <table class="table">
     <thead>
@@ -13,8 +13,8 @@
     <tbody>
       <tr *ngFor="let observation of observations">
         <td>{{ observation.date }}</td>
-        <td></td>
-        <td>{{observation.location }}</td>
+        <td>{{ observation.user.firstName }} {{ observation.user.lastName }}</td>
+        <td>{{ observation.location }}</td>
         <td>{{ observation.plant.name }}</td>
         <td>{{ observation.phase }}</td>
       </tr>
