--- a/phenology-frontend/src/app/page/observation-datas/observation-datas.component.html
+++ b/phenology-frontend/src/app/page/observation-datas/observation-datas.component.html
@@ -79,7 +79,7 @@
         </select>
       </div> -->
 
-      <div *ngIf="observation.plantID" class="form-group mt-3">
+      <div *ngIf="observation.plant._id" class="form-group mt-3">
         <!-- <div class="d-flex justify-content-between">
           <label for="">Fenológiai fázis</label>
         </div> -->
