--- a/phenology-frontend/src/app/common/camera/camera.component.html
+++ b/phenology-frontend/src/app/common/camera/camera.component.html
@@ -1,21 +1,35 @@
-<!-- <div *ngIf="isCameraExist; else noCameraExist">
-  <div style="text-align:center">
-      <div class="btn-group">
-          <button class="btn btn-outline-light" (click)="takeSnapshot()">Fénykép</button>
-          <button class="btn btn-outline-light" (click)="onOffWebCame()">Kamera váltás</button>
-      </div> <br />
-      <webcam [height]="500" [width]="1000" [trigger]="triggerObservable" (imageCapture)="handleImage($event)"
-          *ngIf="showWebcam" [switchCamera]="nextWebcamObservable"></webcam>
+<div *ngIf="isCameraExist; else noCameraExist">
+  <div style="text-align: center">
+    <div class="btn-group">
+      <div *ngIf="showWebcam">
+        <button class="btn btn-outline-light" (click)="takeSnapshot()">
+          {{ photoString }}
+        </button>
+      </div>
+      <div *ngIf="!showWebcam">
+        <button class="btn btn-outline-light" (click)="onOffWebCame()">
+          Kamera bekapcsolása
+        </button>
+      </div>
+    </div>
+    <br />
+    <webcam
+      [height]="500"
+      [width]="1000"
+      [trigger]="triggerObservable"
+      (imageCapture)="handleImage($event)"
+      *ngIf="showWebcam"
+      [switchCamera]="nextWebcamObservable"
+    >
+    </webcam>
   </div>
 
   <div *ngIf="errors.length > 0">
-      <h4>Error Messages:</h4>
-      <ul *ngFor="let error of errors">
-          <li>{{ error | json }}</li>
-      </ul>
+    <h4>Error Messages:</h4>
+    <ul *ngFor="let error of errors">
+      <li>{{ error | json }}</li>
+    </ul>
   </div>
 </div>
 
-<ng-template #noCameraExist>
-  Camera device not available
-</ng-template> -->
+<ng-template #noCameraExist> Camera device not available </ng-template>
