--- a/phenology-frontend/src/app/page/login/login.component.html
+++ b/phenology-frontend/src/app/page/login/login.component.html
@@ -17,6 +17,8 @@
       <button type="submit" class="btn btn-primary col-12 my-3">
         <i class="fa fa-sign-in"></i>
       </button>
+      <a routerLink="../register" class="btn btn-link">Regisztráció</a>
+      <a routerLink="../forgotPassword" class="btn btn-link">Elfelejtett jelszó</a>
     </form>
   </div>
 </div>
