--- a/phenology-frontend/src/app/page/register/register.component.html
+++ b/phenology-frontend/src/app/page/register/register.component.html
@@ -1,137 +1,148 @@
 <div class="card my-2 shadow">
   <h4 class="card-header">Regisztráció</h4>
-  <div class="card-body">
-    <form [formGroup]="form" (ngSubmit)="onSubmit()">
-
-      <div class="form-group">
-        <label for="firstName">Vezetéknév</label>
-        <input
-          type="text"
-          formControlName="firstName"
-          class="form-control my-2"
-          [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }"
-        />
-        <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
-          <div *ngIf="f.firstName.errors.required">
-            Vezetéknév megadása kötelező
-          </div>
-          <div *ngIf="f.firstName.errors.minlength">Hibás vezetéknév</div>
-        </div>
-      </div>
-
-      <div class="form-group">
-        <label for="lastName">Keresztnév</label>
-        <input
-          type="text"
-          formControlName="lastName"
-          class="form-control my-2"
-          [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }"
-        />
-        <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
-          <div *ngIf="f.lastName.errors.required">
-            Keresztnév megadása kötelező
-          </div>
-          <div *ngIf="f.lastName.errors.minlength">Hibás keresztnév</div>
-        </div>
-      </div>
-
-      <div class="form-group">
-        <label for="email">Email cím</label>
-        <input
-          type="email"
-          formControlName="email"
-          class="form-control my-2"
-          [ngClass]="{ 'is-invalid': submitted && f.email.errors }"
-        />
-        <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
-          <div *ngIf="f.email.errors.required">Email cím megadása kötelező</div>
-          <div *ngIf="f.email.errors.email">Hibás email cím</div>
-        </div>
-      </div>
-
-      <div class="form-group">
-        <label for="password">Jelszó</label>
-        <input
-          type="password"
-          formControlName="password"
-          class="form-control my-2"
-          [ngClass]="{ 'is-invalid': submitted && f.password.errors }"
-        />
-        <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-          <div *ngIf="f.password.errors.required">Jelszó megadása kötelező</div>
-          <div *ngIf="f.password.errors.pattern">
-            A jelszó nem elég biztonságos: 9-15 karakter hosszú legyen, legyen
-            benne legalább egy kisbetű, egy nagybetű, egy szám és egy speciális
-            karakter (@!%*?&)
+  <div *ngIf="!registrationOK">
+    <div class="card-body">
+      <form [formGroup]="form" (ngSubmit)="onSubmit()">
+        <div class="form-group">
+          <label for="firstName">Vezetéknév</label>
+          <input
+            type="text"
+            formControlName="firstName"
+            class="form-control my-2"
+            [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }"
+          />
+          <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
+            <div *ngIf="f.firstName.errors.required">
+              Vezetéknév megadása kötelező
+            </div>
+            <div *ngIf="f.firstName.errors.minlength">Hibás vezetéknév</div>
           </div>
         </div>
-      </div>
 
-      <div class="form-group">
-        <label for="confirmPassword">A jelszó megerősítése</label>
-        <input
-          type="password"
-          formControlName="confirmPassword"
-          class="form-control my-2"
-          [ngClass]="{
-            'is-invalid':
-              submitted && f.password.value !== f.confirmPassword.value
-          }"
-        />
-        <div
-          *ngIf="submitted && f.confirmPassword.errors"
-          class="invalid-feedback"
-        >
-          <div *ngIf="f.confirmPassword.errors.required">
-            A jelszó megerősítése kötelező
+        <div class="form-group">
+          <label for="lastName">Keresztnév</label>
+          <input
+            type="text"
+            formControlName="lastName"
+            class="form-control my-2"
+            [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }"
+          />
+          <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
+            <div *ngIf="f.lastName.errors.required">
+              Keresztnév megadása kötelező
+            </div>
+            <div *ngIf="f.lastName.errors.minlength">Hibás keresztnév</div>
           </div>
         </div>
-        <div
-          *ngIf="submitted && f.password.value !== f.confirmPassword.value"
-          class="invalid-feedback"
-        >
-          <div *ngIf="f.password.value !== f.confirmPassword.value">
-            A jelszó nem egyezik
+
+        <div class="form-group">
+          <label for="email">Email cím</label>
+          <input
+            type="email"
+            formControlName="email"
+            class="form-control my-2"
+            [ngClass]="{ 'is-invalid': submitted && f.email.errors }"
+          />
+          <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+            <div *ngIf="f.email.errors.required">
+              Email cím megadása kötelező
+            </div>
+            <div *ngIf="f.email.errors.email">Hibás email cím</div>
           </div>
         </div>
-      </div>
 
-      <div class="form-group">
-        <input
-          type="checkbox"
-          formControlName="termsConditions"
-          [ngClass]="{ 'is-invalid': submitted && f.termsConditions.errors }"
-          class="m-2"
-        />
-        <label for="termsConditions"
-          >Az
-          <a href="">adatvédelmi nyilatkozatot</a>
-          elolvastam, tartalmát megismertem, azt elfogadom.</label
-        >
-        <div
-          *ngIf="submitted && f.termsConditions.errors"
-          class="invalid-feedback"
-        >
-          <div *ngIf="f.termsConditions.errors.required">
-            Az adatvédelmi nyilatkozat elfogadása kötelező
+        <div class="form-group">
+          <label for="password">Jelszó</label>
+          <input
+            type="password"
+            formControlName="password"
+            class="form-control my-2"
+            [ngClass]="{ 'is-invalid': submitted && f.password.errors }"
+          />
+          <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+            <div *ngIf="f.password.errors.required">
+              Jelszó megadása kötelező
+            </div>
+            <div *ngIf="f.password.errors.pattern">
+              A jelszó nem elég biztonságos: 9-15 karakter hosszú legyen, legyen
+              benne legalább egy kisbetű, egy nagybetű, egy szám és egy
+              speciális karakter (@!%*?&)
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="form-group m-2">
-        <button [disabled]="loading" class="btn btn-primary">
-          <span
-            *ngIf="loading"
-            class="spinner-border spinner-border-sm mr-1"
-          ></span>
-          Regisztráció
-        </button>
-        <a routerLink="'/'" class="btn btn-link">Mégsem</a>
-      </div>
-    </form>
+        <div class="form-group">
+          <label for="confirmPassword">A jelszó megerősítése</label>
+          <input
+            type="password"
+            formControlName="confirmPassword"
+            class="form-control my-2"
+            [ngClass]="{
+              'is-invalid':
+                submitted && f.password.value !== f.confirmPassword.value
+            }"
+          />
+          <div
+            *ngIf="submitted && f.confirmPassword.errors"
+            class="invalid-feedback"
+          >
+            <div *ngIf="f.confirmPassword.errors.required">
+              A jelszó megerősítése kötelező
+            </div>
+          </div>
+          <div
+            *ngIf="submitted && f.password.value !== f.confirmPassword.value"
+            class="invalid-feedback"
+          >
+            <div *ngIf="f.password.value !== f.confirmPassword.value">
+              A jelszó nem egyezik
+            </div>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <input
+            type="checkbox"
+            formControlName="termsConditions"
+            [ngClass]="{ 'is-invalid': submitted && f.termsConditions.errors }"
+            class="m-2"
+          />
+          <label for="termsConditions"
+            >Az
+            <a href="">adatvédelmi nyilatkozatot</a>
+            elolvastam, tartalmát megismertem, azt elfogadom.</label
+          >
+          <div
+            *ngIf="submitted && f.termsConditions.errors"
+            class="invalid-feedback"
+          >
+            <div *ngIf="f.termsConditions.errors.required">
+              Az adatvédelmi nyilatkozat elfogadása kötelező
+            </div>
+          </div>
+        </div>
+
+        <div class="form-group m-2">
+          <button [disabled]="loading" class="btn btn-primary">
+            <span
+              *ngIf="loading"
+              class="spinner-border spinner-border-sm mr-1"
+            ></span>
+            Regisztráció
+          </button>
+          <a routerLink="'/'" class="btn btn-link">Mégsem</a>
+        </div>
+      </form>
+    </div>
   </div>
+
+  <div *ngIf="registrationOK" class="m-3">
+    <h3 class="m-2">Sikeres regisztráció</h3>
+    <h5 class="m-2">Még egy utolsó lépés: <br>
+      a megadott email címre küldtünk egy levelet, melyben a
+      linkre kattintva aktiválódik a regisztrációja. Köszönjük!
+     </h5>
+  </div>
+
 </div>
 
-<div>
-  {{ f.firstName.value }}
-</div>
