--- a/phenology-frontend/src/app/page/observation-datas/observation-datas.component.html
+++ b/phenology-frontend/src/app/page/observation-datas/observation-datas.component.html
@@ -78,7 +78,7 @@
         </div>
       </div>
 
-      <button class="m-5">Más növény</button>
+      <!--<button class="m-5">Más növény</button>-->
 
 
       <div *ngIf="observation.plant._id" class="form-group mt-3">
